run build in docker container

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ name: Quarto Publish
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+    container: hadrilec/quarto-website:latest
     steps:
       - name: Check out repository
         uses: actions/checkout@v2 
