--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,14 +1,14 @@
 on:
   push:
     branches: 
-      - master
+      - 'master'
 
 name: Quarto Publish
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-    container: hadrilec/quarto-website:latest
+    #container: hadrilec/quarto-website:latest
     steps:
       - name: Check out repository
         uses: actions/checkout@v2 
