--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,9 @@ website:
         text: Home
       - about.qmd
       - gdp.qmd
+      - text: "More"
+        menu: 
+          - href: deaths.qmd
 
 format:
   html:
